Remedy gradle 7.x deprecation warnings ; Switch to wrapper for gradle/maven vice differing distro versions ; Update dependencies ; List current project pom after install